[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
authors = [{name = "Timendum", email = "timedum@gmail.com"}]
requires-python=">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]
name = "reddit-richtext"
dependencies = []
dynamic = ["version", "description"]


[tool.flit.module]
name = "rrichtext"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "G", "PIE", "TCH", "PLE", "PLW"]
lint.ignore = ["N802", "N806", "N815"]
line-length = 100
output-format = "full"


[project.optional-dependencies]
dev = [
  "reddit-richtext[lint]",
  "reddit-richtext[test]"
]
lint = [
  "ruff >=0.0.291"
]
test = [
  "pytest >=2.7.3",
  "pytest-cov >=5.0.0"
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=rrichtext --cov-report html --cov-report term"
